package game;

import javafx.scene.image.Image;

public class Config {
    public static int PlayerStartHp = 15;
    public static int PlayerStartPosition = 0;
    public static int NumberOfArea = 20;
    public static int[] DrawCardPosition = {5, 10, 15};
    public static int[] NotBuyAblePosition = {0, 5, 10, 15};
    public static int VampirePosition = 0;
    public static double DarkenFactor = 0.8;
    public static Image DamageCardImage = new Image("image/damage1.png");
    public static Image SuperDamageCardImage = new Image("image/damage2.png");
    public static Image ExtremeDamageCardImage = new Image("image/damage3.png");
    public static Image HealCardImage = new Image("image/heal1.png");
    public static Image SuperHealCardImage = new Image("image/heal2.png");
    public static Image ExtremeHealCardImage = new Image("image/heal3.png");
    public static Image SkipCardImage = new Image("image/skip.png");
    public static Image StartGameText = new Image("image/startGameText.png");
    public static Image ExitText = new Image("image/exitText.png");
    public static Image HowToPlayText = new Image("image/howToPlayText.png");
    public static Image ViewStoryText = new Image("image/viewStoryText.png");
    public static Image HomeBackground = new Image("image/homeBackground.jpg");
    public static Image Player1Image = new Image("image/player1.png");
    public static Image MiniPlayer1Image = new Image("image/miniPlayer1.png");
    public static Image Player2Image = new Image("image/player2.png");
    public static Image MiniPlayer2Image = new Image("image/miniPlayer2.png");
    public static Image Background = new Image("image/background.png");
    public static Image VampireImage = new Image("image/vampire.png");
    public static Image EventImage = new Image("image/event.png");
    public static Image UpgradeImage = new Image("image/upgrade.png");
    public static Image RollDiceImage = new Image("image/rollDice.png");
    public static Image BuyImage = new Image("image/buy.png");
    public static Image PickUpCardImage = new Image("image/pickUpCard.png");
    public static Image EndBackground = new Image("image/endBackground.png");
    public static Image RetryText = new Image("image/retry.png");
    public static Image Player1WinImage = new Image("image/player1Win.png");
    public static Image Player2WinImage = new Image("image/player2Win.png");
    public static Image CommingSoonImage = new Image("image/comingSoon.png");
    public static Image BackText = new Image("image/back.png");
    public static String Dice1Path = "image/dice1.png";
    public static String Dice2Path = "image/dice2.png";
    public static String Dice3Path = "image/dice3.png";
    public static String Dice4Path = "image/dice4.png";
    public static String Dice5Path = "image/dice5.png";
    public static String Dice6Path = "image/dice6.png";
    public static String Title = "Castle of Bloodlines: The Monopoly of Nightmares";
    public static String Player1Name = "Player1";
    public static String Player2Name = "Player2";

}